Fixed ball going out of bounds.

--- a/frontend/src/components/home-page/header-main/HeaderMain.module.scss
+++ b/frontend/src/components/home-page/header-main/HeaderMain.module.scss
@@ -145,6 +145,7 @@ $bottom: 50px;
   right: 0;
   text-align: right;
   padding: 16px 20px 0 0;
+  pointer-events: none;
   &::before,
   &::after {
     color: $heavierThemeColor;
